[package]
name = "date-rs-t6"
version = "0.1.2"
edition = "2021"
authors = ["TakaShinoda"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/TakaShinoda/date-rs-t6"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
chrono = "0.4.38"

# [[bin]]
# name = "lib_main"
# path = "src/lib.rs"
