[package]
name = "date-rs-t6"
version = "0.1.3"
edition = "2021"
authors = ["TakaShinoda"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/TakaShinoda/date-rs-t6"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
chrono = "0.4.38"
js-sys = "0.3.72"

# [[bin]]
# name = "lib_main"
# path = "src/lib.rs"

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
